k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: banking

spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
