k8s-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: bank.kinar.in
      http:
        path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
    - host: api.bank.kinar.in
      http:
        path: /
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 8080
